# computer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  pyproject.toml  run.py  run_shopping.sh
changelog/: 2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md
mac/: loop.py  test_tool.py  tool.py
shopping/: ARCHITECTURE.md  agent.py  prompt.py
shopping/tools/: bash.py  text_editor.py
tests/: test_bash.py  test_text_editor.py  test_tool.py
